{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 198,
  "lineage": "5c767809-bc71-6b6e-34fd-0d407cd28e5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c13eab67c5d8861",
            "arn": "arn:aws:ec2:us-east-1:175364008455:instance/i-05f2f367945eea5cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f2f367945eea5cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dde155747afdcdb3",
            "private_dns": "ip-10-0-0-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.144",
            "public_dns": "ec2-34-202-237-45.compute-1.amazonaws.com",
            "public_ip": "34.202.237.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cc7a8136a53bdf91",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-04831ee8a8d6dc5c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062c098c49624aa5a",
            "tags": {
              "Name": "terra-ec2-Hello_Dicha-0"
            },
            "tags_all": {
              "Name": "terra-ec2-Hello_Dicha-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04831ee8a8d6dc5c6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_shhweb",
            "aws_subnet.terra_pub_sub1",
            "aws_vpc.terra_vpc",
            "data.aws_ami.amazon"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c13eab67c5d8861",
            "arn": "arn:aws:ec2:us-east-1:175364008455:instance/i-0903cf5a604fb34fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0903cf5a604fb34fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b58a39d12050d29f",
            "private_dns": "ip-10-0-0-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.149",
            "public_dns": "ec2-54-172-248-79.compute-1.amazonaws.com",
            "public_ip": "54.172.248.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d4a15d8614acdeae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-04831ee8a8d6dc5c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062c098c49624aa5a",
            "tags": {
              "Name": "terra-ec2-Hello_Dicha-1"
            },
            "tags_all": {
              "Name": "terra-ec2-Hello_Dicha-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04831ee8a8d6dc5c6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_shhweb",
            "aws_subnet.terra_pub_sub1",
            "aws_vpc.terra_vpc",
            "data.aws_ami.amazon"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c13eab67c5d8861",
            "arn": "arn:aws:ec2:us-east-1:175364008455:instance/i-090773c87b837afe5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090773c87b837afe5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b92943ea7827d2c",
            "private_dns": "ip-10-0-0-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.73",
            "public_dns": "ec2-54-242-166-160.compute-1.amazonaws.com",
            "public_ip": "54.242.166.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f7a40bd525ed6b02",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-04831ee8a8d6dc5c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062c098c49624aa5a",
            "tags": {
              "Name": "terra-ec2-Hello_Dicha-2"
            },
            "tags_all": {
              "Name": "terra-ec2-Hello_Dicha-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04831ee8a8d6dc5c6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_shhweb",
            "aws_subnet.terra_pub_sub1",
            "aws_vpc.terra_vpc",
            "data.aws_ami.amazon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c13eab67c5d8861",
            "arn": "arn:aws:ec2:us-east-1:175364008455:instance/i-011a6f9b51791b6ed",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011a6f9b51791b6ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e3e1394a0688d31",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0058fe3a881bf228b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-04831ee8a8d6dc5c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a7151e7f853b18a",
            "tags": {
              "Name": "terra-instance"
            },
            "tags_all": {
              "Name": "terra-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04831ee8a8d6dc5c6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_shhweb",
            "aws_subnet.terra_priv_sub1",
            "aws_vpc.terra_vpc",
            "data.aws_ami.amazon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175364008455:internet-gateway/igw-0ee7d3e11998335e5",
            "id": "igw-0ee7d3e11998335e5",
            "owner_id": "175364008455",
            "tags": {
              "Name": "terra_igw"
            },
            "tags_all": {
              "Name": "terra_igw"
            },
            "vpc_id": "vpc-04fab1ca947a43d1c"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175364008455:route-table/rtb-042d450bc1ffd0e2c",
            "id": "rtb-042d450bc1ffd0e2c",
            "owner_id": "175364008455",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fab1ca947a43d1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175364008455:route-table/rtb-0ec313589283cd00c",
            "id": "rtb-0ec313589283cd00c",
            "owner_id": "175364008455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee7d3e11998335e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rt"
            },
            "tags_all": {
              "Name": "pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fab1ca947a43d1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd7af55705612990",
            "route_table_id": "rtb-042d450bc1ffd0e2c",
            "subnet_id": "subnet-00a7151e7f853b18a"
          },
          "dependencies": [
            "aws_route_table.priv_rt",
            "aws_subnet.terra_priv_sub1",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8b1ab5934301f0f",
            "route_table_id": "rtb-0ec313589283cd00c",
            "subnet_id": "subnet-062c098c49624aa5a"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.pub_rt",
            "aws_subnet.terra_pub_sub1",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_shhweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175364008455:security-group/sg-04831ee8a8d6dc5c6",
            "description": "Allow shh and web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04831ee8a8d6dc5c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow shh inbound traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow web inbound traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_shhweb",
            "name_prefix": "",
            "owner_id": "175364008455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_shhweb"
            },
            "tags_all": {
              "Name": "allow_shhweb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fab1ca947a43d1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_priv_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175364008455:subnet/subnet-00a7151e7f853b18a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a7151e7f853b18a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175364008455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra_priv_sub1"
            },
            "tags_all": {
              "Name": "terra_priv_sub1"
            },
            "vpc_id": "vpc-04fab1ca947a43d1c"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175364008455:subnet/subnet-062c098c49624aa5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062c098c49624aa5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175364008455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra_pub_sub1"
            },
            "tags_all": {
              "Name": "terra_pub_sub1"
            },
            "vpc_id": "vpc-04fab1ca947a43d1c"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175364008455:vpc/vpc-04fab1ca947a43d1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff20ccdcdaf9e09e",
            "default_route_table_id": "rtb-03072a6c1a004927d",
            "default_security_group_id": "sg-0640573b5141bf465",
            "dhcp_options_id": "dopt-04cc4957f667e2c6c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04fab1ca947a43d1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03072a6c1a004927d",
            "owner_id": "175364008455",
            "tags": {
              "Name": "terra_vpc"
            },
            "tags_all": {
              "Name": "terra_vpc"
            }
          }
        }
      ]
    }
  ]
}